--- a/public/index.html
+++ b/public/index.html
@@ -29,6 +29,23 @@
   <script src="http://demo.themefisher.com/parsa/plugins/headroom/headroom.js"></script>
   <script src="http://demo.themefisher.com/parsa/plugins/reading-time/readingTime.min.js"></script>
   <script src="http://demo.themefisher.com/parsa/js/script.js"></script>
+  <script>
+    setTimeout(function () {
+      if (($('#instafeed').length) !== 0) {
+        var userId = $('#instafeed').attr('data-userId');
+        var accessToken = $('#instafeed').attr('data-accessToken');
+        var userFeed = new Instafeed({
+          get: 'user',
+          userId: userId,
+          resolution: 'low_resolution',
+          accessToken: accessToken,
+          template: '<div class="instagram-post"><img class="img-fluid w-100" src="{{image}}" alt="instagram-image"><ul class="list-inline text-center"><li class="list-inline-item"><a href="{{link}}" target="_blank" class="text-white"><i class="ti-heart mr-2"></i>{{likes}}</a></li><li class="list-inline-item"><a href="{{link}}" target="_blank" class="text-white"><i class="ti-comments mr-2"></i>{{comments}}</a></li></ul></div>'
+        });
+        userFeed.run();
+      }
+  }, 2000);
+  
+  </script>
 </body>
 
 </html>
