--- a/public/index.html
+++ b/public/index.html
@@ -3,19 +3,12 @@
 
 <head>
   <title>Product Moor</title>
-  <meta charset="utf-8">
-  </meta>
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  </meta>
-  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-  </meta>
-
-  <link rel='stylesheet' href='http://demo.themefisher.com/parsa/plugins/bootstrap/bootstrap.min.css' />
-  <link rel='stylesheet' href='http://demo.themefisher.com/parsa/plugins/slick/slick.css' />
-  <link rel='stylesheet' href='http://demo.themefisher.com/parsa/plugins/themify-icons/themify-icons.css' />
-  <link href='http://demo.themefisher.com/parsa/css/style.css' rel='stylesheet' />
-  <link rel='shortcut icon' href='http://demo.themefisher.com/parsa/images/favicon.ico' type='image/x-icon' />
-  <link rel='icon' href='http://demo.themefisher.com/parsa/images/favicon.ico' type='image/x-icon' />
+  <meta charset="utf-8"></meta>
+  <meta name="viewport" content="width=device-width, initial-scale=1"></meta>
+  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1"></meta>
+  <link rel="stylesheet" href="../css/font.css">
+  <link rel="stylesheet" href="../css/ress.css">
+  <link rel="stylesheet" href="../css/layout.css">
 </head>
 
 <body>
