--- a/public/index.html
+++ b/public/index.html
@@ -9,10 +9,11 @@
   <link rel="stylesheet" href="../css/font.css">
   <link rel="stylesheet" href="../css/ress.css">
   <link rel="stylesheet" href="../css/layout.css">
+  <link rel="stylesheet" href="../css/slick.css">
 </head>
 
 <body>
-  <div id="root" style="height: 100%"></div>
+     <div id="root" style="height: 100%"></div>
   <script src="http://demo.themefisher.com/parsa/plugins/jQuery/jquery.min.js"></script>
   <script src="http://demo.themefisher.com/parsa/plugins/bootstrap/bootstrap.min.js"></script>
   <script src="http://demo.themefisher.com/parsa/plugins/slick/slick.min.js"></script>
@@ -22,6 +23,13 @@
   <script src="http://demo.themefisher.com/parsa/plugins/headroom/headroom.js"></script>
   <script src="http://demo.themefisher.com/parsa/plugins/reading-time/readingTime.min.js"></script>
   <script src="http://demo.themefisher.com/parsa/js/script.js"></script>
+
+  <script src="/js/jquery-1.11.0.min.js"></script>
+  <script src="/js/jquery-migrate-1.2.1.min.js"></script>
+  <script src="/js/masonry.pkgd.min.js"></script>
+  <script src="/js/slick.min.js"></script>
+  <script src="/js/ui.js"></script>
+
   <script>
     setTimeout(function () {
       if (($('#instafeed').length) !== 0) {
