[FROTN] ie브라우저 호환성 추카

--- a/public/index.html
+++ b/public/index.html
@@ -14,22 +14,12 @@
 
 <body>
      <div id="root" style="height: 100%"></div>
-  <script src="http://demo.themefisher.com/parsa/plugins/jQuery/jquery.min.js"></script>
-  <script src="http://demo.themefisher.com/parsa/plugins/bootstrap/bootstrap.min.js"></script>
-  <script src="http://demo.themefisher.com/parsa/plugins/slick/slick.min.js"></script>
-  <script src="http://demo.themefisher.com/parsa/plugins/masonry/masonry.js"></script>
-  <script src="http://demo.themefisher.com/parsa/plugins/instafeed/instafeed.min.js"></script>
-  <script src="http://demo.themefisher.com/parsa/plugins/smooth-scroll/smooth-scroll.js"></script>
-  <script src="http://demo.themefisher.com/parsa/plugins/headroom/headroom.js"></script>
-  <script src="http://demo.themefisher.com/parsa/plugins/reading-time/readingTime.min.js"></script>
-  <script src="http://demo.themefisher.com/parsa/js/script.js"></script>
-
   <script src="/js/jquery-1.11.0.min.js"></script>
   <script src="/js/jquery-migrate-1.2.1.min.js"></script>
   <script src="/js/masonry.pkgd.min.js"></script>
   <script src="/js/slick.min.js"></script>
   <script src="/js/ui.js"></script>
-
+  <script src="https://cdn.jsdelivr.net/npm/promise-polyfill@7/dist/polyfill.min.js"></script>
   <script>
     setTimeout(function () {
       if (($('#instafeed').length) !== 0) {
