[FRONT] ga 코드 추가

--- a/public/index.html
+++ b/public/index.html
@@ -10,6 +10,15 @@
   <link rel="stylesheet" href="../css/ress.css">
   <link rel="stylesheet" href="../css/slick.css">
   <link rel="stylesheet" href="../css/layout.css">
+
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-163489692-1"></script>
+<script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+      gtag('config', 'UA-163489692-1');
+</script>
 </head>
 
 <body>
