--- a/public/index.html
+++ b/public/index.html
@@ -2,8 +2,9 @@
 <html lang="en">
 
 <head>
-  <title>Product Moor</title>
+  <title>Product Moor - 유럽 명품 가구 소개, 구매, 정보 제공</title>
   <meta charset="utf-8"></meta>
+  <meta name="description" content="유럽 명품 가구 브랜드 및 제품 정보 , 온라인 구매에 대해 소개합니다.">
   <meta name="viewport" content="width=device-width, initial-scale=1"></meta>
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1"></meta>
   <link rel="stylesheet" href="../css/font.css">
